--- a/Forecasting Container/App.config
+++ b/Forecasting Container/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+  </startup>
+
+  <appSettings>
+    <add key="RootPythonPredictionScriptPath" value="provide one"/>
+    <add key="ModelsCount" value="5"/>
+    <add key="TargetHistoricalFileStore" value="5MinuteBars.csv"/>
+    <add key="TargetCurrentBarsAndLags" value="CurrentBars.csv"/>
+    <add key="PythonPredictionScriptFile" value="ES_FiveFactor_FrontOnly.py"/>
+    <add key="SourcePythonPredictionOutputFile" value="PythonOutput_ES_FiveFactor_FrontOnly.csv"/>
+    <add key="PythonExecutablePath" value="C:\Users\ideav\AppData\Local\Programs\Python\Python38\python.exe"/>
+    <add key="ChromeExecutablePath" value="C:\Program Files\Google\Chrome\Application\chrome.exe"/>
+    <add key="RootSymbolBeingPredicted" value="ES"/>
+    <add key="QuoteFrameEmbeddedDisplayUrl" value="https://www.streetsmartcentral.com/OXNetTools/Quote/QuoteFrame.aspx?SESSIONID="/>
+    <add key="XPathToRenderedLastPriceElement" value="//table[@id='quoteTable']//tbody//tr//td[@id='tdLast']"/>
+    <add key="XPathToRenderedAskPriceElement" value=""/>
+    <add key="XPathToRenderedBidPriceElement" value=""/>
+    <add key="XPathToRenderedVolumeElement" value=""/>
+    <add key="StartLoginUrl" value="https://www.streetsmartcentral.com/login/CustomerLogin.aspx"/>
+    <add key="LoginIdElementId" value="loginIdInput"/>
+    <add key="LoginIDValue" value=""/>
+    <add key="LoginActionElementId" value="btnLogin"/>
+    <add key="PasswordElementId" value="passwordInput"/>
+    <add key="PasswordValue" value=""/>
+    <add key="RootSymbolsList" value="ES,EC,US,GC,BTC,NQ"/>
+  </appSettings>
 </configuration>
