Prediction script path should be pwd now.

--- a/Forecasting Container/App.config
+++ b/Forecasting Container/App.config
@@ -5,7 +5,7 @@
   </startup>
 
   <appSettings>
-    <add key="RootPythonPredictionScriptPath" value="provide one"/>
+    <add key="RootPythonPredictionScriptPath" value="."/>
     <add key="ModelsCount" value="5"/>
     <add key="TargetHistoricalFileStore" value="5MinuteBars.csv"/>
     <add key="TargetCurrentBarsAndLags" value="CurrentBars.csv"/>
