Improved exception handling, misc defects, use new ES_FiveFactor impl.

--- a/Forecasting Container/App.config
+++ b/Forecasting Container/App.config
@@ -9,7 +9,7 @@
     <add key="ModelsCount" value="5"/>
     <add key="TargetHistoricalFileStore" value="5MinuteBars.csv"/>
     <add key="TargetCurrentBarsAndLags" value="CurrentBars.csv"/>
-    <add key="PythonPredictionScriptFile" value="ES_FiveFactor_FrontOnly.py"/>
+    <add key="PythonPredictionScriptFile" value="ES_FiveFactor_CurrentPrediction.py"/>
     <add key="SourcePythonPredictionOutputFile" value="PythonOutput_ES_FiveFactor_FrontOnly.csv"/>
     <add key="PythonExecutablePath" value="C:\Users\ideav\AppData\Local\Programs\Python\Python38\python.exe"/>
     <add key="ChromeExecutablePath" value="C:\Program Files\Google\Chrome\Application\chrome.exe"/>
