--- a/Forecasting Container/packages.config
+++ b/Forecasting Container/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.50" targetFramework="net472" />
-  <package id="Selenium.Support" version="4.10.0" targetFramework="net472" />
-  <package id="Selenium.WebDriver" version="4.10.0" targetFramework="net472" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="115.0.5790.10200" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.52" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.19.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.19.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.19.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Selenium.Support" version="4.12.2" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="4.12.2" targetFramework="net472" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="116.0.5845.9600" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="7.0.0" targetFramework="net472" />
 </packages>
