Cumulative code changes

--- a/Forecasting Container/App.config
+++ b/Forecasting Container/App.config
@@ -1,30 +1,63 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
 
   <appSettings>
-    <add key="RootPythonPredictionScriptPath" value="."/>
-    <add key="ModelsCount" value="5"/>
-    <add key="TargetHistoricalFileStore" value="5MinuteBars.csv"/>
-    <add key="TargetCurrentBarsAndLags" value="CurrentBars.csv"/>
-    <add key="PythonPredictionScriptFile" value="ES_FiveFactor_CurrentPrediction.py"/>
-    <add key="SourcePythonPredictionOutputFile" value="PythonOutput_ES_FiveFactor_FrontOnly.csv"/>
-    <add key="PythonExecutablePath" value="C:\Users\ideav\AppData\Local\Programs\Python\Python38\python.exe"/>
-    <add key="ChromeExecutablePath" value="C:\Program Files\Google\Chrome\Application\chrome.exe"/>
-    <add key="RootSymbolBeingPredicted" value="ES"/>
-    <add key="QuoteFrameEmbeddedDisplayUrl" value="https://www.streetsmartcentral.com/OXNetTools/Quote/QuoteFrame.aspx?SESSIONID="/>
-    <add key="XPathToRenderedLastPriceElement" value="//table[@id='quoteTable']//tbody//tr//td[@id='tdLast']"/>
-    <add key="XPathToRenderedAskPriceElement" value=""/>
-    <add key="XPathToRenderedBidPriceElement" value=""/>
-    <add key="XPathToRenderedVolumeElement" value=""/>
-    <add key="StartLoginUrl" value="https://www.streetsmartcentral.com/login/CustomerLogin.aspx"/>
-    <add key="LoginIdElementId" value="loginIdInput"/>
-    <add key="LoginIDValue" value=""/>
-    <add key="LoginActionElementId" value="btnLogin"/>
-    <add key="PasswordElementId" value="passwordInput"/>
-    <add key="PasswordValue" value=""/>
-    <add key="RootSymbolsList" value="ES,EC,US,GC,BTC,NQ"/>
+    <add key="RootPythonPredictionScriptPath" value="C:\Users\ideav\Documents\PythonWork\FiveFactor" />
+    <add key="ModelsCount" value="5" />
+    <add key="ModelsTimeSeriesLags" value="20" />
+    <add key="TargetHistoricalFileStore" value="5MinuteBars.csv" />
+    <add key="TargetCurrentBarsAndLags" value="CurrentBars.csv" />
+    <add key="PythonPredictionScriptFile" value="ES_FiveFactor_CurrentPrediction.py" />
+    <add key="SourcePythonPredictionOutputFile" value="PythonOutput_ES_FiveFactor_FrontOnly.csv" />
+    <add key="PythonExecutablePath" value="C:\Users\ideav\AppData\Local\Programs\Python\Python38\python.exe" />
+    <add key="ChromeExecutablePath" value="C:\Program Files\Google\ChromeTest\Application\chrome.exe" />
+    <add key="RootSymbolBeingPredicted" value="ES" />
+    <add key="QuoteFrameEmbeddedDisplayUrl" value="https://www.streetsmartcentral.com/OXNetTools/Quote/QuoteFrame.aspx?SESSIONID=" />
+    <add key="XPathToRenderedLastPriceElement" value="//table[@id='quoteTable']//tbody//tr//td[@id='tdLast']" />
+    <add key="XPathToRenderedAskPriceElement" value="" />
+    <add key="XPathToRenderedBidPriceElement" value="" />
+    <add key="XPathToRenderedVolumeElement" value="//table[@id='quoteTable']//tbody//tr//td[@id='tdVolume']" />
+    <add key="StartLoginUrl" value="https://www.streetsmartcentral.com/login/CustomerLogin.aspx" />
+    <add key="LoginIdElementId" value="loginIdInput" />
+    <add key="LoginIDValue" value="ideaves" />
+    <add key="LoginActionElementId" value="btnLogin" />
+    <add key="PasswordElementId" value="passwordInput" />
+    <add key="PasswordValue" value=".DaEa7322." />
+    <add key="RootSymbolsList" value="ES,EC,US,GC,BTC,NQ" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Text.Encodings.Web" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.3" newVersion="7.0.0.3" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
